# caveman-rs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  README.md  install-release.sh  install.ps1  install.sh
.claude-plugin/: plugin.json
.github/workflows/: release.yml  rust.yml
.secuws/: .gitignore
commands/: caveman-init.toml
docs/: install-windows.md
plugins/caveman/agents/: cavecrew-investigator.md
plugins/caveman/skills/caveman-stats/: SKILL.md
rust/: Cargo.toml  README.md
rust/src/: activate.rs  config.rs  init.rs  install.rs  main.rs  mode_tracker.rs  settings.rs  stats.rs  statusline.rs
