[package]
name = "caveman"
version = "0.2.0"
edition = "2021"
description = "Caveman — native Rust hooks + installer for Claude Code (no Node required)"
license = "MIT"
authors = ["Julius Brussee"]
repository = "https://github.com/JuliusBrussee/caveman"

[[bin]]
name = "caveman"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
include_dir = "0.7.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
